feat: all tests pass and have more coverage